--- a/style.css
+++ b/style.css
@@ -24,12 +24,15 @@ header h1 {
 .canvas-container {
     display: flex;
     height: 500px;
+    width: 90%;
 }
 
 canvas {
     border: 2px solid #cccccc;
+    font-size: 14px;
     margin: 20px;
     flex-grow: 1;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -38,15 +41,47 @@ canvas {
     padding: 10px;
     text-decoration: none;
     color: white;
-    margin: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     background-image: linear-gradient( #083e69, #171566 );
     border-radius: 5px;
+    transition: 0.4s;
+}
+
+.btn:hover {
+    transform: translateY(-5px);
+}
+
+.btn:active {
+    transform: scale(1.10);
+}
+
+.minus-btn {
+    font-size: 16px;
+    text-decoration: none;
+    color: #083e69;
+    display: inline-block;
+    margin-left: 10px;
+    transition: 0.4s;
+}
+
+.minus-btn:hover {
+    transform: translateY(-3px);
+}
+
+.minus-btn:active {
+    transform: scale(1.15);
+}
+
+.batiment-control {
+    display: inline-block;
 }
 
 a.btn-off {
-    background-image: linear-gradient(#777777, #cccccc);
+    color: #cccccc;
 }
 
-.btn-off:hover {
-    cursor: none;
+a.btn-off:hover {
+    transform: none;
+    cursor: not-allowed;
 }
