--- a/style.css
+++ b/style.css
@@ -21,19 +21,14 @@ header h1 {
     color: white;
 }
 
-.canvas-container {
-    display: flex;
-    height: 500px;
-    width: 90%;
-}
-
 canvas {
     border: 2px solid #cccccc;
     font-size: 14px;
     margin: 20px;
-    flex-grow: 1;
     font-family: Arial, Helvetica, sans-serif;
-
+    display: inline-block;
+    width: 47%;
+    height: 500px;
 }
 
 .btn {
@@ -84,4 +79,8 @@ a.btn-off {
 a.btn-off:hover {
     transform: none;
     cursor: not-allowed;
+}
+
+select {
+    display: inline-block;
 }
