--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ canvas {
     font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     width: 47%;
-    height: 500px;
+    height: 60vh;
 }
 
 .btn {
@@ -36,11 +36,11 @@ canvas {
     padding: 10px;
     text-decoration: none;
     color: white;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 10px;
     background-image: linear-gradient( #083e69, #171566 );
     border-radius: 5px;
     transition: 0.4s;
+    font-size: 11px;
 }
 
 .btn:hover {
@@ -52,11 +52,11 @@ canvas {
 }
 
 .minus-btn {
-    font-size: 16px;
+    font-size: 14px;
     text-decoration: none;
     color: #083e69;
     display: inline-block;
-    margin-left: 10px;
+    margin-left: 5px;
     transition: 0.4s;
 }
 
@@ -70,6 +70,12 @@ canvas {
 
 .batiment-control {
     display: inline-block;
+    width: 250px;
+    text-align: center;
+    margin-right: 20px;
+    margin-left: 20px;
+    padding: 5px 10px;
+    height: 20vh;
 }
 
 a.btn-off {
@@ -81,6 +87,41 @@ a.btn-off:hover {
     cursor: not-allowed;
 }
 
-select {
+.step-control {
     display: inline-block;
+    margin-right: 5px;
+    margin-left: 5px;
+    text-align: center;
+    height: 20vh;
+    padding: 5px 10px;
+}
+
+.draw-control {
+    display: inline-block;
+    margin: 20px;
+    padding: 20px;
+    background-color: #7271b6;
+    height: 20vh;
+    border-radius: 10px;
+    font-size: 14px;
+}
+
+.radio-container * {
+    margin-left: 20px;
+}
+
+.batiment-control select {
+    display: inline-block;
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+.title {
+    font-size: 14px;
+    margin: 10px;
+}
+
+.no-display {
+    display: none;
 }
