refact (ihm): ajout de feedback après l'ajout et la suppression de batiment, changement de la couleur dans le 2D et amélioration de la présentation des endroits à dessiner

--- a/style.css
+++ b/style.css
@@ -101,9 +101,12 @@ a.btn-off:hover {
     margin: 20px;
     padding: 20px;
     background-color: #7271b6;
-    height: 20vh;
     border-radius: 10px;
     font-size: 14px;
+}
+
+.draw-control input {
+    margin-right: 20px;
 }
 
 .radio-container * {
