--- a/style.css
+++ b/style.css
@@ -1,217 +1,98 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
 body {
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 header {
     width: 100%;
-    height: 60px;
-    background-image: linear-gradient( tomato, rgb(179, 56, 34) );
-}
-
-header h1 a {
-    text-decoration: none;
-    color: #ffffff;
+    background-color: rgb(41, 41, 151);
+    display: flex;
 }
 
 header h1 {
-    font-size: 20px;
+    padding: 10px;
     font-weight: normal;
-    padding: 20px;
-    display: inline-block;
+    font-size: 24px;
+    flex-grow: 1;
     color: white;
-    width: 45%;
 }
 
-.main-control {
-    display: inline-block;
-    width: 54%;
-    text-align: right;
+header nav {
+    flex-grow: 1;
+    text-align: end;
 }
 
-.btn-link {
-    color: white;
+.button {
+    padding: 20px 40px;
     display: inline-block;
     text-decoration: none;
-    margin-right: 20px;
-    letter-spacing: 3px;
-    transition: 0.4s;
+    color: white;
+    background-color: rgb(41, 41, 151);
 }
 
-.btn-link:active {
-    transform: scale(1.5);
+.button:hover {
+    cursor: pointer;
+    background-color: rgb(24, 24, 100);
 }
 
-.btn-link:hover {
-    color: #cccccc;
+.canvas-container {
+    display: flex;
+    height: 70vh;
+}
+
+.canvas-container-item {
+    flex-grow: 1;
+    margin: 20px;
+    border: 2px solid #cccccc;
+    overflow: scroll;
 }
 
 .canvas-2d-container {
-    overflow: scroll;
-    width: 46%;
-    height: 60vh;
-    display: inline-block;
-    margin: 20px;
+    max-width: 50%;
+    background-color: cornflowerblue;
 }
 
-canvas {
-    border: 2px solid #cccccc;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    display: inline-block;
+.controls {
+    display: flex;
+    margin: 0px 20px;
 }
 
-.canvas-3d {
-    width: 46%;
-    height: 60vh;
-    margin: 20px;
-}
-
-.btn {
-    display: inline-block;
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-    margin: 10px;
-    background-image: linear-gradient( tomato, rgb(179, 56, 34) );
-    border-radius: 5px;
-    transition: 0.4s;
-    font-size: 16px;
-}
-
-.btn:hover {
-    transform: translateY(-5px);
-}
-
-.btn:active {
-    transform: scale(1.10);
-}
-
-.minus-btn {
-    font-size: 14px;
-    text-decoration: none;
-    color: #083e69;
-    display: inline-block;
-    margin-left: 5px;
-    transition: 0.4s;
-}
-
-.minus-btn:hover {
-    transform: translateY(-3px);
-}
-
-.minus-btn:active {
-    transform: scale(1.15);
-}
-
-.batiment-control {
-    display: inline-block;
-    text-align: center;
-    margin-right: 20px;
-    margin-left: 20px;
-    padding: 5px 10px;
-    height: 20vh;
-}
-
-a.btn-off {
-    color: #cccccc;
-}
-
-header #map-name {
-    letter-spacing: 5px;
-    margin-left: 40px;
-    font-size: 16px;
-    background-color: #083e69;
-    padding: 10px 20px;
-    border-radius: 100px;
-}
-
-a.btn-off:hover {
-    transform: none;
-    cursor: not-allowed;
-}
-
-.step-control {
-    display: inline-block;
-    margin-right: 5px;
-    margin-left: 5px;
-    text-align: center;
-    height: 20vh;
-    padding: 5px 10px;
-}
-
-.draw-control {
-    display: inline-block;
-    margin: 20px;
-    padding: 20px;
-    background-color: tomato;
-    border-radius: 10px;
-    font-size: 14px;
-}
-
-.draw-control input {
-    margin-right: 20px;
-}
-
-.radio-container * {
-    margin-left: 20px;
-}
-
-.batiment-control select {
-    display: inline-block;
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 10px;
+.controls > div {
+    margin: 10px 20px;
 }
 
 .title {
-    font-size: 14px;
-    margin: 10px;
+    font-weight: normal;
+    border-bottom: 2px solid #cccccc;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-size: 24px;
 }
 
-.no-display {
-    display: none;
+.controls .button {
+    padding: 10px 20px;
 }
 
-.modal {
-    background-color: rgba(0, 0, 0, 0.4);
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    text-align: center;
-    display: none;
-    transition: 1s;
+select {
+    padding: 10px;
+    border: 1px solid #cccccc;
 }
 
-.modal-content {
-    width: 50%;
-    height: 50%;
-    box-shadow: #000000 5px 5px 20px;
-    background-color: #cccccc;
-    transform: translate(50%, 50%);
+.step {
+    display: inline-block;
+    padding: 10px;
+    background-color: #dddddd;
 }
 
-.modal-header {
-    background-color: tomato;
-    height: 30%;
-    color: white;
-    padding: 20px;
+.step:hover {
+    cursor: pointer;
 }
 
-.modal-content h2 {
-    width: 50%;
-    height: 50%;
-    transform: translate(50%, 50%);
-}
-
-.modal-content h2 span {
-    color: rgb(163, 110, 101);
+.not-allow-step {
+    color: #eeeeee;
 }
